<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="240dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/app_name"
            android:padding="16dp"
            app:srcCompat="@drawable/ic_app_logo_white" />

        <TextView
            android:id="@+id/logo_title"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <EditText
            android:id="@+id/login_email_edit_Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_email_white_24dp"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/email_address_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="Autofill" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/edit_text_divider" />

        <EditText
            android:id="@+id/login_password_edit_Text"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_lock_white_24dp"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="Autofill" />

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/edit_text_divider" />

    </LinearLayout>

    <Button
        android:id="@+id/login_btn"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/btn_login"
        android:onClick="LoginBtnClick"
        android:padding="16dp"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/sign_up_btn"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/btn_signup"
        android:onClick="SignUpBtnCLick"
        android:padding="16dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:transitionName="@string/login_sign_up_trans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/forgot_your_password_text_view"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:padding="8dp"
        android:text="@string/forgot_your_password"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_btn" />

    <ProgressBar
        android:id="@+id/login_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_your_password_text_view" />

</android.support.constraint.ConstraintLayout>